--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN VS SIDEMEN ULTIMATE RANKING</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Why Nothing Feels Exciting Anymore</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Real creativity doesn’t come from thinking harder, it comes from being still.</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Nothing Feels Exciting Anymore</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8894,7 +8894,7 @@
                         <div class="video-info">
                             <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN VS SIDEMEN ULTIMATE RANKING</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>How Will Arthur Go On After This..🙂‍↕️</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
