--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>He took it well</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Write this one down</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>I’ll get the next one dw 😆</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Hope I did it right!</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Smooooooooooth</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Skeletor loved his prom</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">27 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>I don’t know what was that guys</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">27 minutes ago</div>
+                        <div class="date">36 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Clive is stuck in the cat flap</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">27 minutes ago</div>
+                        <div class="date">37 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -211,16 +211,16 @@
                     <div class="video-info">
                         <h3>I saw the light for a second</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">28 minutes ago</div>
+                        <div class="date">37 minutes ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=DrJk5SYbh_M" target="_blank">
-                    <img src="https://i.ytimg.com/vi/DrJk5SYbh_M/mqdefault.jpg" alt="SIDEMEN VS SIDEMEN ULTIMATE RANKING">
+                    <img src="https://i.ytimg.com/vi/DrJk5SYbh_M/mqdefault.jpg" alt="HOW WELL DO THE SIDEMEN KNOW EACH OTHER?">
                     <div class="video-info">
-                        <h3>SIDEMEN VS SIDEMEN ULTIMATE RANKING</h3>
+                        <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">2 hours ago</div>
                     </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Why Nothing Feels Exciting Anymore</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Nothing Feels Exciting Anymore</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>He took it well</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Write this one down</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>I’ll get the next one dw 😆</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Hope I did it right!</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Smooooooooooth</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Skeletor loved his prom</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">27 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>I don’t know what was that guys</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">27 minutes ago</div>
+                            <div class="date">36 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Clive is stuck in the cat flap</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">27 minutes ago</div>
+                            <div class="date">37 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10320,16 +10320,16 @@
                         <div class="video-info">
                             <h3>I saw the light for a second</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">28 minutes ago</div>
+                            <div class="date">37 minutes ago</div>
                         </div>
                     </a>
                 </div>
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=DrJk5SYbh_M" target="_blank">
-                        <img src="https://i.ytimg.com/vi/DrJk5SYbh_M/mqdefault.jpg" alt="SIDEMEN VS SIDEMEN ULTIMATE RANKING">
+                        <img src="https://i.ytimg.com/vi/DrJk5SYbh_M/mqdefault.jpg" alt="HOW WELL DO THE SIDEMEN KNOW EACH OTHER?">
                         <div class="video-info">
-                            <h3>SIDEMEN VS SIDEMEN ULTIMATE RANKING</h3>
+                            <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">2 hours ago</div>
                         </div>
